[package]
name = "web_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
chrono = "0.4.35"
jsonwebtoken = "9.3.0"
mongodb = "2.8.2"
serde = "1.0.197"
serde_json = "1.0.114"
